# Changelog
# $Id$

mm-dd-10 - Version 5.1.14
   
   - Testsuite.regression MicroPerformanceRegressionTest, NumbersRegressionTest, PooledConnectionRegressionTest,
     ResultSetRegressionTest are up to date.

   - Testsuite.regression.MetaDataRegressionTest up to date.
   
   - Typo in StatementRegressionTest.testLikeWithBackslashes fixed. StatementRegressionTest
     is up to date.

   - Fix for Bug#58232 - CallableStatement fails to fetch OUT parameter against 5.5 server
   
   - Testsuite.regression.Connection, tests for BUG#45419 refined by Todd so not to cause failures.

   - Testsuite.regression.CallableStatement, tests for BUG#26959 failing against 5.5+ server.

   - Bringing testsuite.regression.CachedRowsetTest up to date.

   - Bringing BLOBregression tests up to date.

   - Fix for Bug#58042 - Statements test failure not handled.

   - Fix for Bug#57850 - Refresh SELECT statement doesn't use correct data type.
     Added Field.valueNeedsQuoting (private final boolean) and protected boolean getvalueNeedsQuoting().
	 UpdatableResultSet refresher and updater call upon this value now.
	 
   - Removing commented source in fix for Bug#57697
   - Fix for Bug#57697 - Metadata getTables() was not checking for table_name already been quoted.
   - Fix for Bug#57694 - 3byte UTF8 can not be used with 5.5.3+ server.
   - Fix for Bug#57701 - StatementsTest.testBatchRewriteErrors() failing on new servers.
   
   - Fix for Bug#54756 - Cannot retrieve data from ResultSet by column name from a Sphinx daemon.
     We were relying only on "server version string" passed. Now, determining
	 server version is done via protocol flags too, where applicable.

   - Fix for Bug#57022 - cannot execute a store procedure with output parameters,
     database parameter was ignored in db.sp notation. The fix is to "sanitize" 
	 db.sp call just like in patch for noAccessToProcedureBodies. BaseTestCase
	 extended with createDatabase and dropDatabase. Regression test added.
