@@ -3,6 +3,8 @@
 
 mm-dd-10 - Version 5.1.14
    
+   - Testsuite.regression SubqueriesRegressionTest and StringRegressionTest are up to date.
+
    - Testsuite.regression MicroPerformanceRegressionTest, NumbersRegressionTest, PooledConnectionRegressionTest,
      ResultSetRegressionTest are up to date.
 
